# campus-lost-found-system

./: .gitignore  README.md  app.py  config.py  imaging.py  init_db.bat  init_db.py  notifications.py  pyproject.toml  render.yaml  requirements.txt  start.bat  start.ps1  wsgi.py
campus-lost-found-system/: .gitignore  README.md  app.py  config.py  constants.py  database.sql  init_db.py  main.py  matching.py  models.py  render.yaml  requirements.txt  stop.bat  wsgi.py  他人电脑运行注意事项.txt
campus-lost-found-system/static/css/: style.css
campus-lost-found-system/static/js/: main.js
campus-lost-found-system/templates/: _post_fields.html  admin_edit_post.html  admin_posts.html  admin_students.html  base.html  chat.html  forgot_password.html  messages.html  my_posts.html  post_detail.html  post_form.html  reset_password.html  student_home.html  student_login.html  student_register.html
static/css/: style.css
static/js/: chat.js  dashboard.js  main.js  post_form.js
templates/: _pagination.html  _post_fields.html  admin_announcements.html  admin_dashboard.html  admin_login.html  admin_messages.html  admin_posts.html  announcements.html  base.html  chat.html  error.html  forgot_password.html  messages.html  my_posts.html  settings.html  student_home.html  student_login.html
