[project]
name = "campus-lost-found-system"
version = "0.1.0"
description = "Campus Lost & Found system (Flask) deployed as an ASGI app."
requires-python = ">=3.11"
dependencies = [
    "Flask==3.0.3",
    "Flask-SQLAlchemy==3.1.1",
    "PyMySQL==1.1.1",
    "Werkzeug==3.0.3",
    "cryptography==42.0.8",
    "Pillow==10.3.0",
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "a2wsgi==1.10.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "app", "config", "constants", "imaging", "init_db", "matching", "models", "notifications"]
